# public_playground

./: README.md
.github/workflows/: uv_pytest.yml  uv_pytest_scurri_puzzle2.yml  uv_pytest_scurri_puzzle3.yml
projects/puzzle2/: README.md  main.py  pyproject.toml
projects/puzzle2/puzzle2/: lib_puzzle2.py
projects/puzzle2/tests/: README.md  test_lib_puzzle2.py
projects/puzzle3/: README.md  main.py  pyproject.toml
projects/puzzle3/cli_helpers/: __init__.py  colors.py
projects/puzzle3/puzzle3/: __init__.py  lib_puzzle3.py  validators.py
projects/puzzle3/tests/: README.md  __init__.py  test_lib_puzzle3.py
